--- a/README.org
+++ b/README.org
@@ -70,6 +70,11 @@ its content.
 
 ** Enero 2025
 
+*** 30-Ene-25
++ [[https://arxiv.org/abs/2501.10127][A formally verified IEEE 754 floating-point implementation of interval iteration for MDPs]]. ~ Bram Kohlen, Maximilian Schäffeler, Mohammad Abdulaziz, Arnd Hartmanns, Peter Lammich. #ITP #IsabelleHOL
++ [[https://github.com/teorth/expdb][Analytic number theory exponent database]]. ~ Terence Tao et als. #ITP #LeanProver #Math
++ [[https://pujet.fr/pdf/cellular.pdf][Cellular methods in homotopy type theory]]. ~ Axel Ljungström,  Loïc Pujet. #ITP #Agda
+
 *** 29-Ene-25
 + [[https://www.isa-afp.org/entries/Mission_Time_LTL.html][Mission-time linear temporal logic (in Isabelle/HOL)]]. ~ Katherine Kosaian, Zili Wang, Elizabeth Sloan. #ITP #IsabelleHOL
 + [[https://www.isa-afp.org/entries/Mission_Time_LTL_to_Regular_Expression.html][Mission-time linear temporal logic to regular expressions (in Isabelle/HOL)]]. ~ Zili Wang, Katherine Kosaian. #ITP #IsabelleHOL
