--- a/README.org
+++ b/README.org
@@ -71,6 +71,27 @@ its content.
 
 ** Febrero 2025
 
+*** 11-Feb-25
++ [[https://irreal.org/blog/?p=3632][Streams in Common Lisp]]. ~ jcs. #CommonLisp
++ [[https://kaygun.tumblr.com/post/106845304649/functional-streams][Functional streams]]. ~ Atabey Kaygun. #CommonLisp
++ [[https://github.com/mchung94/primes][Programming techniques: Generating prime numbers in Common Lisp]]. ~ Mitchell Chung. #CommonLisp #Math
++ [[https://arxiv.org/abs/2502.06217][Examining false positives under inference scaling for mathematical reasoning]]. ~ Yu Wang, Nan Yang, Liang Wang, Furu Wei. #LLMs #Math #Reasoning
++ [[https://arxiv.org/abs/2502.06453][MATH-perturb: Benchmarking LLMs' math reasoning abilities against hard perturbations]]. ~ Kaixuan Huang et als. #LLMs #Math #Reasoning
++ [[https://arxiv.org/abs/2410.10735][Embedding self-correction as an inherent ability in large language models for enhanced mathematical reasoning]]. ~ Kuofeng Gao, Huanqia Cai, Qingyao Shuai, Dihong Gong, Zhifeng Li. #LLMs #Math #Reasoning
+
+*** 10-Feb-25
++ [[https://cacm.acm.org/news/feedback-loops-guide-ai-to-proof-checking/][Feedback loops guide AI to proof checking]]. ~ Chris Edwards. #AI #ITP #LeanProver #Coq
++ [[https://arxiv.org/abs/2502.06055][Verified certificates via SAT and computer algebra systems for the Ramsey R(3,8) and R(3,9) problems]]. ~ Zhengyu Li, Conor Duggan, Curtis Bright, Vijay Ganesh. #SAT #CAS
++ [[https://arxiv.org/abs/2502.05714][Proving the coding interview: A benchmark for formally verified code generation]]. ~ Quinn Dougherty, Ronak Mehta. #AI #LLMs #Python #ITP
++ [[https://arxiv.org/abs/2502.05567][ATLAS: Autoformalizing theorems through lifting, augmentation, and synthesis of data]]. ~ Xiaoyang Liu, Kangjie Bao, Jiashuo Zhang, Yunqi Liu, Yu Chen, Yuntian Liu, Yang Jiao, Tao Luo. #LLMs #ITP #LeanProver #Math #Autoformalization
++ [[https://arxiv.org/abs/2410.07432][Can Transformers reason logically? A study in SAT solving]]. ~ Leyan Pan, Vijay Ganesh, Jacob Abernethy, Chris Esposo, Wenke Lee. #LLMs #Reasoning #SAT_Solvers
+
+*** 09-Feb-25
++ [[https://xenaproject.wordpress.com/2025/02/09/what-is-a-quotient/][What is a quotient?]] ~ Kevin Buzzard. #ITP #LeanProver #Math
++ [[https://dl.acm.org/doi/10.1145/3712057][Systems correctness practices at AWS: Leveraging formal and semi-formal methods]]. ~ Marc Brooker, Ankush Desai. #FormalMethods #ITP #LeanProver
++ [[https://www.cambridge.org/core/journals/journal-of-functional-programming/article/turner-bird-eratosthenes-an-eternal-burning-thread/32E2EDF5D5EAEC95F13D313BC97B86F0][Turner, Bird, Eratosthenes: An eternal burning thread]]. ~ Jeremy Gibbons. #Haskell #FunctionalProgramming
++ [[https://www.quantamagazine.org/chatbot-software-begins-to-face-fundamental-limitations-20250131/][Chatbot software begins to face fundamental limitations]]. ~ Anil Ananthaswamy. #LLMs
+
 *** 08-Feb-25
 + [[https://www.isa-afp.org/entries/CVM_Distinct_Elements.html][Verification of the CVM algorithm with a new recursive analysis technique]]. ~ Emin Karayel, Derek Khu, Kuldeep S. Meel, Yong Kiam Tan, Seng Joe Watt. #ITP #IsabelleHOL
 + [[https://www.cambridge.org/core/services/aop-cambridge-core/content/view/E8BE1DB3FD80AB7AD92EE979893A10AC/S0956796825000024a.pdf/review_of_haskell_in_depth_by_vitaly_bragilevsky_manning_publications_2021.pdf][Review of "Haskell in depth" by Vitaly Bragilevsky]]. ~ Brent Yorgey. #Haskell #FunctionalProgramming
