--- a/README.org
+++ b/README.org
@@ -71,6 +71,10 @@ its content.
 
 ** Febrero 2025
 
+*** 22-Feb-25
++ [[https://babbagefiles.xyz/lambda-calculus-and-lisp-01/][Lambda calculus and Lisp, part 1]]. #LambdaCalculus #Lisp
++ [[https://babbagefiles.xyz/lambda-calculus-and-lisp-02-recursion/][Lambda calculus and Lisp, part 2]]. #LambdaCalculus #Emacs #Lisp
+
 *** 21-Feb-25
 + [[https://youtu.be/5ZIIGLiQWNM][Machine-assisted proofs (February 19, 2025)]]. ~ Terence Tao. #ITP #LeanProver #AI #Math
 + [[https://youtu.be/8NijQB2oqKg][Formalisation of combinatorial optimisation in Isabelle/HOL: Network flows]]. ~ Thomas Ammer. #ITP #IsabelleHOL #Math
